Added drawing functions and first client logic.

--- a/site/index.html
+++ b/site/index.html
@@ -33,15 +33,14 @@
               <td>Алло</td>
             </tr>
             <tr>
-              <td>Хуем по лбу не дало?</td>
+              <td>Да, я, да</td>
             </tr>
           </tbody>
         </table>
       </div>
       <div id="gameContainer" class="col">
         <div>
-          <canvas height="300"width="300" class="mx-auto d-block"
-          id="cvGame">
+          <canvas height="315"width="315" class="mx-auto d-block" id="cvGame">
           </canvas>
         </div>
       </div>
